Fixed padding,alignment,display in all sections

--- a/my-portfolio/style.css
+++ b/my-portfolio/style.css
@@ -32,6 +32,14 @@ section{
 .about, .projects, .contact {
     font-family: 'Poppins', sans-serif;
 }
+.about .about-content,
+.projects .proj-content,
+.contact .contact-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
 /* navbar styling */
 .navbar{
     position: fixed;
